Switched to using ogen convenient errors
